--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
                     </div>
                     <div class="col-4">
                         <label for="age" class="form-label">Fascia d'età</label>
-                        <input type="number" id="age" class="form-control">
+                        <select class="form-select" id="age">
+                            <option value="maggiorenne">Maggiorenne</option>
+                            <option value="minorenne">Minorenne</option>
+                            <option value="over_65">Over 65</option>
+                          </select>
                     </div>
                     <div class="col-12 ">
                         <p class="text-danger" id="info_form"></p>
